--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,31 @@
 <!doctype html>
 <html ng-app>
   <head>
+    <meta charset="utf-8" />
+    <title>MM</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
-    <script src="app/app.js"></script>
   </head>
   <body>
+     <nav class='navigation' class='hidden'>
+      <ul>
+        <li><a ng-href='/gallery'>Gallery</a></li>
+        <li><a ng-href='/about'>About</a></li>
+        <li><a ng-href='/contact'>Contact</a></li>
+      </ul>
+    </nav>
+    <div ng-view>
+    </div>
     <div>
       <label>Name:</label>
       <input type="text" ng-model="yourName" placeholder="Enter a name here">
       <hr>
       <h1>Hello {{yourName}}!</h1>
     </div>
+    <script src="app/load/load.js"></script>
+    <script src="app/gallery/gallery.js"></script>
+    <script src="app/about/about.js"></script>
+    <script src="app/contact/contact.js"></script>
+    <script src="app/app.js"></script>
   </body>
 </html>
