(adds) continued backend setup, angular routes added

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <title>MM</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
+    <script src="ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-route.js"></script>
   </head>
   <body>
      <nav class='navigation' class='hidden'>
