--- a/client/app/contact/contact.html
+++ b/client/app/contact/contact.html
@@ -1,1 +1,7 @@
-contact.html
+   <div class="container">
+   		Hello, this is the contact!
+      <label>Name:</label>
+      <input type="text" ng-model="yourName" placeholder="Enter a name here">
+      <hr>
+      <h1>Hello {{yourName}}!</h1>
+    </div>
