--- a/client/app/load/load.html
+++ b/client/app/load/load.html
@@ -1,1 +1,6 @@
-load.html
+    <div id="container">
+      <label>Name:</label>
+      <input type="text" ng-model="yourName" placeholder="Enter a name here">
+      <hr>
+      <h1>Hello {{yourName}}!</h1>
+    </div>
