--- a/client/index.html
+++ b/client/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>MM</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
     <script src="../node_modules/angular/angular.min.js"></script>
     <!--script src=
     "../node_modules/angular-ui-router/build/angular-ui-router.min.js">
     </script-->
     <script src="../node_modules/angular-route/angular-route.min.js"></script>  
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
   </head>
   <body ng-app="app">
-    <div>Sup</div>
-     <nav class="navigation" class="hidden">
+     <nav id="nav">
       <ul>
         <li><a ng-href='#/gallery'>Gallery</a></li>
         <li><a ng-href='#/about'>About</a></li>
