First steps towards custom lightbox

--- a/client/app/gallery/gallery.html
+++ b/client/app/gallery/gallery.html
@@ -1,3 +1,9 @@
 <div class="container">
 Hello, this is the gallery!
 </div>
+<input type="search" ng-model="q" placeholder="filter images..." aria-label="filter photos" />
+<div class="container">
+	<div ng-repeat="photo in photos | filter:q as results">
+		<img ng-src="{{photo.src}}" class="pics" ng-click="setMaster($event)">
+	</div>
+</div>
