--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <!--script src=
     "../node_modules/angular-ui-router/build/angular-ui-router.min.js">
     </script-->
+    <script src="../node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="../node_modules/angular-route/angular-route.min.js"></script>  
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
@@ -23,7 +24,7 @@
       </ul>
     </nav>
     <div ng-view></div>
-    <div class="container"></div>
+    <!-- <div class="container"></div> -->
     <script src="app/app.js"></script>
     <script src="app/gallery/gallery.js"></script>
    <script src="app/about/about.js"></script>
